--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,51 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<PatientManagementSystem.Models.Patient>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Welcome</h1>
+<p>List of Patients:</p>
+
+<a asp-controller="Patients" asp-action="Create" class="btn btn-primary mb-3">Create New Patient</a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Date of Birth</th>
+            <th>Email</th>
+            <th>Contact</th>
+            <th>FroontImage</th>
+            <th>LeftImage</th>
+            <th>RightImage</th>
+            <th>BackImage</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var patient in Model)
+        {
+            <tr>
+                <td>@patient.Id</td>
+                <td>@patient.Name</td>
+                <td>@patient.DateOfBirth.ToShortDateString()</td>
+                <td>@patient.Email</td>
+                <td>@patient.Contact</td>
+                <td>
+                    <img src="@patient.FrontImageUrl" alt="Front" class="img-thumbnail rounded-circle" style="width: 50px; height: 50px;" />
+                </td>
+                <td>
+                    <img src="@patient.LeftImageUrl" alt="Front" class="img-thumbnail rounded-circle" style="width: 50px; height: 50px;" />
+                </td>
+                <td>
+                    <img src="@patient.RightImageUrl" alt="Front" class="img-thumbnail rounded-circle" style="width: 50px; height: 50px;" />
+                </td>
+                <td>
+                    <img src="@patient.BackImageUrl" alt="Front" class="img-thumbnail rounded-circle" style="width: 50px; height: 50px;" />
+                </td>
+                <td>
+                    <a asp-controller="Patients" asp-action="Edit" asp-route-id="@patient.Id" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-controller="Patients" asp-action="Delete" asp-route-id="@patient.Id" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
