fix model nullity

--- a/Views/Patients/Create.cshtml
+++ b/Views/Patients/Create.cshtml
@@ -35,9 +35,9 @@
              <!-- Front Image -->
             <div class="form-group">
                 <label for="FrontImage">Front Image</label>
-                @if (!string.IsNullOrEmpty(Model.FrontImageUrl))
+                @if (Model != null && !string.IsNullOrEmpty(Model.FrontImageUrl))
                 {
-                    <img src="@Model.FrontImageUrl" alt="Front Image" class="img-thumbnail" style="width: 100px; height: 100px;" />
+                    <img src="@Model.FrontImageUrl" alt="Front Image" />
                 }
                 <input type="file" name="FrontImage" class="form-control" />
             </div>
@@ -45,7 +45,7 @@
             <!-- Left Image -->
             <div class="form-group">
                 <label for="LeftImage">Left Image</label>
-                @if (!string.IsNullOrEmpty(Model.LeftImageUrl))
+                @if (Model != null && !string.IsNullOrEmpty(Model.LeftImageUrl))
                 {
                     <img src="@Model.LeftImageUrl" alt="Left Image" class="img-thumbnail" style="width: 100px; height: 100px;" />
                 }
@@ -55,7 +55,7 @@
             <!-- Right Image -->
             <div class="form-group">
                 <label for="RightImage">Right Image</label>
-                @if (!string.IsNullOrEmpty(Model.RightImageUrl))
+                @if (Model != null && !string.IsNullOrEmpty(Model.RightImageUrl))
                 {
                     <img src="@Model.RightImageUrl" alt="Right Image" class="img-thumbnail" style="width: 100px; height: 100px;" />
                 }
@@ -65,7 +65,7 @@
             <!-- Back Image -->
             <div class="form-group">
                 <label for="BackImage">Back Image</label>
-                @if (!string.IsNullOrEmpty(Model.BackImageUrl))
+                @if (Model != null && !string.IsNullOrEmpty(Model.BackImageUrl))
                 {
                     <img src="@Model.BackImageUrl" alt="Back Image" class="img-thumbnail" style="width: 100px; height: 100px;" />
                 }
